--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <<meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
     <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css'>
     <link rel="stylesheet" href="css/style.css">
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
@@ -11,7 +12,7 @@
 </head>
 
 <body class="loginBody">
-    <div class="login-form">
+    <div class="loginform">
     	<p class="logoText">HEMS</p>
         <div class="form-group ">
             <input type="text" class="form-control" placeholder="Username " id="UserName">
