disign is now completed

--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>HEMS</title>
 </head>
+
 <body>
-    <div class="loginBody">
-        username
-        <input type="text" class="field" id="uname">
-        password
-        <input type="password" class="field" id="Password">
+    <div class="field">
+        <div class="Lname">HEMS - Login</div>
+        <div class="iFream">
+            <input type="text" class="inputBox" id="uname" placeholder="User Name">
+        </div>
+        <div class="iFream">
+            <input type="password" class="inputBox" id="Password" placeholder="Password">
+        </div>
+        <button type="submit" id="submitBTN">Submit</button>
     </div>
+
 </body>
+
 </html>
