Navation is now set

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <div class="field">
         <div class="Lname">HEMS - Login</div>
         <div class="iFream">
-            <input type="text" class="inputBox" id="uname" placeholder="User Name">
+            <input type="text" value="Ayush" class="inputBox" id="uname" placeholder="User Name">
         </div>
         <div class="iFream">
-            <input type="password" class="inputBox" id="Password" placeholder="Password">
+            <input type="password" value="12345" class="inputBox" id="Password" placeholder="Password">
         </div>
         <button type="submit" id="submitBTN" onclick="verify()">Submit</button>
     </div>
